[project]
name = "graphrag"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.5,<0.6",
    "ipykernel>=7.2.0",
    "langchain>=0.3",
    "langchain-chroma>=0.1",
    "langchain-community>=0.3",
    "langchain-openai>=0.2",
    "neo4j>=6.1.0",
    "onnxruntime>=1.19,<1.20",
    "openai>=2.30.0",
    "pypdf>=6.9.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",
]
